<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.DetailsHeaderFragment">

    <TextView
        android:id="@+id/trainType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/type"
        android:textColor="@color/normalText"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/direction"
        android:layout_width="336dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/direction"
        android:textColor="@color/normalText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/trainType"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/export_to_agenda"
        android:layout_width="179dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/buttons"
        android:fontFamily="sans-serif-light"
        android:text="@string/to_agenda"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/export_to_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainType" />

    <Button
        android:id="@+id/export_to_contact"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/buttons"
        android:fontFamily="sans-serif-light"
        android:text="@string/to_contact"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/export_to_agenda"
        app:layout_constraintTop_toBottomOf="@+id/trainType" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/ride_number"
        android:textColor="@color/normalText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/export_to_agenda" />

    <TextView
        android:id="@+id/train_ride_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/test_data_string"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/export_to_agenda" />

</androidx.constraintlayout.widget.ConstraintLayout>