<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/direction"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/direction"
        android:textColor="#354c7b"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@+id/planned_track"
        app:layout_constraintStart_toEndOf="@+id/departure_time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planned_track"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/track"
        android:textAlignment="viewEnd"
        android:textColor="#354c7b"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/planned_track"
        app:layout_constraintStart_toEndOf="@+id/delay"
        app:layout_constraintTop_toBottomOf="@+id/direction" />

    <TextView
        android:id="@+id/departure_time"
        android:layout_width="46dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/time"
        android:textColor="#354c7b"
        app:layout_constraintBaseline_toBaselineOf="@+id/direction"
        app:layout_constraintEnd_toStartOf="@+id/direction"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delay"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/delay"
        app:layout_constraintEnd_toStartOf="@+id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_time" />
</androidx.constraintlayout.widget.ConstraintLayout>